[desktop] new URL(s) -> new URI(s).toURL() deprecation fix on UpdateMessageReader, cleanup